[package]

name = "yasteroids"
version = "0.1.1"
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[[bin]]
name = "yasteroids"
path = "src/main.rs"

[features]
default = []

[dependencies.id]
git = "https://github.com/kvark/simplecs"

[dependencies.secs]
git = "https://github.com/kvark/simplecs"
plugin = true

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx_macros"
plugin = true

[dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx_device_gl"

[dependencies.glutin]
git = "https://github.com/tomaka/gl-init-rs.git"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
optional = true

[dependencies]
env_logger = "*"
rand = "*"
time = "*"
